// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createBidaskShape > both sides of active bin > return the correct shape #1 1`] = `
{
  "222": [
    0n,
    332731513n,
  ],
  "223": [
    0n,
    302483194n,
  ],
  "224": [
    0n,
    272234875n,
  ],
  "225": [
    0n,
    241986555n,
  ],
  "226": [
    0n,
    211738236n,
  ],
  "227": [
    0n,
    181489916n,
  ],
  "228": [
    0n,
    151241597n,
  ],
  "229": [
    0n,
    120993277n,
  ],
  "230": [
    0n,
    90744958n,
  ],
  "231": [
    0n,
    60496638n,
  ],
  "232": [
    9518407n,
    33859235n,
  ],
  "233": [
    25726794n,
    0n,
  ],
  "234": [
    38590191n,
    0n,
  ],
  "235": [
    51453589n,
    0n,
  ],
  "236": [
    64316986n,
    0n,
  ],
  "237": [
    77180383n,
    0n,
  ],
  "238": [
    90043781n,
    0n,
  ],
  "239": [
    102907178n,
    0n,
  ],
  "240": [
    115770575n,
    0n,
  ],
  "241": [
    128633973n,
    0n,
  ],
  "242": [
    141497370n,
    0n,
  ],
  "243": [
    154360767n,
    0n,
  ],
}
`;

exports[`createBidaskShape > both sides of active bin > return the correct shape #2 1`] = `
{
  "224": [
    0n,
    300783488n,
  ],
  "225": [
    0n,
    267363101n,
  ],
  "226": [
    0n,
    233942713n,
  ],
  "227": [
    0n,
    200522325n,
  ],
  "228": [
    0n,
    167101938n,
  ],
  "229": [
    0n,
    133681550n,
  ],
  "230": [
    0n,
    100261162n,
  ],
  "231": [
    0n,
    66840775n,
  ],
  "232": [
    148852284n,
    529502943n,
  ],
  "233": [
    402324896n,
    0n,
  ],
  "234": [
    603487344n,
    0n,
  ],
  "235": [
    804649792n,
    0n,
  ],
  "236": [
    1005812240n,
    0n,
  ],
  "237": [
    1206974688n,
    0n,
  ],
  "238": [
    1408137136n,
    0n,
  ],
  "239": [
    1609299584n,
    0n,
  ],
  "240": [
    1810462032n,
    0n,
  ],
}
`;

exports[`createBidaskShape > left side of active bin > excluding active bin 1`] = `
{
  "223": [
    0n,
    370370370n,
  ],
  "224": [
    0n,
    333333333n,
  ],
  "225": [
    0n,
    296296296n,
  ],
  "226": [
    0n,
    259259259n,
  ],
  "227": [
    0n,
    222222222n,
  ],
  "228": [
    0n,
    185185185n,
  ],
  "229": [
    0n,
    148148148n,
  ],
  "230": [
    0n,
    111111111n,
  ],
  "231": [
    0n,
    74074074n,
  ],
}
`;

exports[`createBidaskShape > left side of active bin > ignore tokens from right side 1`] = `
{
  "233": [
    25974025n,
    0n,
  ],
  "234": [
    38961038n,
    0n,
  ],
  "235": [
    51948051n,
    0n,
  ],
  "236": [
    64935064n,
    0n,
  ],
  "237": [
    77922077n,
    0n,
  ],
  "238": [
    90909090n,
    0n,
  ],
  "239": [
    103896103n,
    0n,
  ],
  "240": [
    116883116n,
    0n,
  ],
  "241": [
    129870129n,
    0n,
  ],
  "242": [
    142857142n,
    0n,
  ],
  "243": [
    155844155n,
    0n,
  ],
}
`;

exports[`createBidaskShape > left side of active bin > including active bin 1`] = `
{
  "223": [
    0n,
    0n,
  ],
  "224": [
    0n,
    0n,
  ],
  "225": [
    0n,
    0n,
  ],
  "226": [
    0n,
    0n,
  ],
  "227": [
    0n,
    0n,
  ],
  "228": [
    0n,
    0n,
  ],
  "229": [
    0n,
    0n,
  ],
  "230": [
    0n,
    0n,
  ],
  "231": [
    0n,
    0n,
  ],
  "232": [
    562234021n,
    1999999999n,
  ],
}
`;

exports[`createBidaskShape > right side of active bin > excluding active bin 1`] = `
{
  "233": [
    30769230n,
    0n,
  ],
  "234": [
    46153846n,
    0n,
  ],
  "235": [
    61538461n,
    0n,
  ],
  "236": [
    76923076n,
    0n,
  ],
  "237": [
    92307692n,
    0n,
  ],
  "238": [
    107692307n,
    0n,
  ],
  "239": [
    123076923n,
    0n,
  ],
  "240": [
    138461538n,
    0n,
  ],
  "241": [
    153846153n,
    0n,
  ],
  "242": [
    169230769n,
    0n,
  ],
}
`;

exports[`createBidaskShape > right side of active bin > ignore tokens from left side 1`] = `
{
  "233": [
    25974025n,
    0n,
  ],
  "234": [
    38961038n,
    0n,
  ],
  "235": [
    51948051n,
    0n,
  ],
  "236": [
    64935064n,
    0n,
  ],
  "237": [
    77922077n,
    0n,
  ],
  "238": [
    90909090n,
    0n,
  ],
  "239": [
    103896103n,
    0n,
  ],
  "240": [
    116883116n,
    0n,
  ],
  "241": [
    129870129n,
    0n,
  ],
  "242": [
    142857142n,
    0n,
  ],
  "243": [
    155844155n,
    0n,
  ],
}
`;

exports[`createBidaskShape > right side of active bin > including active bin 1`] = `
{
  "232": [
    562234021n,
    1999999999n,
  ],
  "233": [
    13469722n,
    0n,
  ],
  "234": [
    20204583n,
    0n,
  ],
  "235": [
    26939444n,
    0n,
  ],
  "236": [
    33674306n,
    0n,
  ],
  "237": [
    40409167n,
    0n,
  ],
  "238": [
    47144028n,
    0n,
  ],
  "239": [
    53878889n,
    0n,
  ],
  "240": [
    60613750n,
    0n,
  ],
  "241": [
    67348612n,
    0n,
  ],
  "242": [
    74083473n,
    0n,
  ],
}
`;
